fix count duration

--- a/app/views/main/login.erb
+++ b/app/views/main/login.erb
@@ -4,7 +4,7 @@
 		<span style="display: block; font-weight: bold; margin-top:5px">경희대학교 강의평가시스템</span>
 		<img style="height: 200px" src="/assets/logo.png">
 		<span style="display: block; font-weight: bold">
-			<span class="count" style="font-size:25px"><%= User.all.count %></span> 명이 
+			<span class="count" style="font-size:25px">300</span> 명이 
 			<span class="count" style="font-size:25px"><%= Review.all.count %></span> 개의 강의평가를 하였습니다
 		</span>
 		<div style="position: relative; left: 50%; margin-left: -125px; padding-top: 20px; width: 250px;">
